@@ -7,7 +7,7 @@ fi
 
 ${mms.jdk.home}/bin/java \
     -Dmms.home="${mms.home}" \
-    -Xms8G -Xmx8G ${MMS_OPTIONS} \
+    -Xms8G -Xmx8G -XX:+UseConcMarkSweepGC -XX:ParallelGCThreads=8 ${MMS_OPTIONS} \
     -javaagent:"${mms.home}/lib/openjpa-all-${openjpaversion}.jar" \
     -Djava.io.tmpdir=${mms.tmpdir} \
     -classpath "${mms.home}/lib/*" \
